// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package designcompose.definition.element;

option java_multiple_files = true;
option java_package = "com.android.designcompose.definition.element";
option optimize_for = LITE_RUNTIME;

// A message used to identify a specific node within a design document. It
// supports different ways to specify the node, including by its ID, name,
// variant (name and parent), or component set.
message NodeQuery {
  // A Node that is a variant, so the name may have multiple properties
  // The first string is the node name and the second is its parent's name
  message NodeVariant {
    string name = 1;
    string parent = 2;
  }
  oneof NodeQuery {
    string node_id = 1;
    string node_name = 2;
    NodeVariant node_variant = 3;
    string node_component_set = 4;
  }
}
