// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package com.android.designcompose.proto.design;

import "design/text_style.proto";
import "design/view_style.proto";

option java_multiple_files = true;

message ComponentOverrides {
  ViewStyle style = 1;
  oneof component_content_override {
    bool none = 2;
    string text = 3;
    StyledText styled_text = 4;
  }
}

message ComponentInfo {
  string id = 1;
  string name = 2;
  string component_set_name = 3;
  ComponentOverrides overrides = 4;
}
